# colpali-vespa-visual-retrieval

./: .env.example  .gitattributes  .gitignore  .sesskey  CLAUDE.md  README.md  SETUP_LOCAL.md  colpali.py  docker-compose.yml  icons.py  ki55.toml  main.py  pyproject.toml  requirements-local.txt  requirements.txt  tailwindcss
.claude/: ralph-loop.local.md
.claude/commands/: check.md  debug.md  lint-fix.md  lint.md  search-test.md  server.md  start.md  test.md
backend/: __init__.py  agent.py  colpali.py  config.py  drawing_regions.py  ingest.py  llm_config.py  llm_rerank.py  logging_config.py  metadata_extraction.py  middleware.py  page_sizing.py  project_store.py  rerank.py  s3.py  stopwords.py  text_extraction.py  vespa_app.py
backend/compliance/: __init__.py  evidence_service.py  matching_service.py  reporting.py  requirement_service.py  review_service.py  (+4 more)
docs/: architecture.md  llm_acceptance_criteria_centralized_logging.md  procore_db_schema.md
frontend/: app.py  layout.py
frontend-next/: next.config.ts  package-lock.json  package.json
scripts/: discover_schema.py  feed_data.py  ingest_colqwen3_embeddings.py  ingest_database.py  ingest_sample.py  reingest_single_file_colqwen3.py  setup_local.sh  start.sh  stop.sh  sync_cron.sh  sync_database.py  test_connections.py  test_e2e_file_ingestion.py  test_ingestion.py  test_real_ingestion.py
specs/: ingestion-architecture-improvements.md
tests/: __init__.py  conftest.py
vespa-app/: hosts.xml  services.xml  validation-overrides.xml
web/: CLAUDE.md  next.config.ts  package-lock.json  package.json
(+207 files in other folders)
